# cognito-pyauth

./: .editorconfig  .env.test.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
cognito_pyauth/: __init__.py  auth.py  config.py  exceptions.py  schemas.py  utils.py
tests/: conftest.py  testutil.py
tests/app/feature/: test_api_auth.py
tests/app/unit/: test_unit.py
tests/utils/: __init__.py  config.py  get_token.py
